# video2mixamo

./: .gitignore  README.md  bot.glb  pyproject.toml  requirements.txt
scripts/: download_models.py
src/: __init__.py  capture.py  config.py  detector.py  exporter_bvh.py  filter.py  main.py  rotation.py  skeleton.py
tests/: test_mixamo_character.py
video_to_maximo/: __init__.py  capture.py  config.py  detector.py  exporter_bvh.py  filter.py  main.py  mixamo_character.py  quaternion.py  rotation.py  skeleton.py  vector.py  viz3d.py
